@@ -4973,7 +4973,7 @@ void Driver::DoControllerCommand
 			{
 				Log::Write( LogLevel_Info, 0, "Add Device" );
 				Msg* msg = new Msg( "AddDevice", 0xff, REQUEST, FUNC_ID_ZW_ADD_NODE_TO_NETWORK, true );
-				msg->Append( m_currentControllerCommand->m_highPower ? ADD_NODE_ANY | OPTION_HIGH_POWER : ADD_NODE_ANY );
+				msg->Append( m_currentControllerCommand->m_highPower ? ADD_NODE_ANY | OPTION_HIGH_POWER | OPTION_NWI : ADD_NODE_ANY );
 				SendMsg( msg, MsgQueue_Command );
 			}
 			break;
