@@ -162,6 +162,7 @@ Version 1.3
  - Fixed issue #586 - Compile Error on newer GCC's (Justin)
  - Fixed issue #568 - Compile Error on new OSX (Justin)
  - Update the device_classes.xml with the latest known mappings (Justin)
+ - Enable NWI when adding nodes if HighPower is also enabled (Justin)
 
 Version 1.2 
  - Released on 15/10/14
